--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,10 @@
 {
-    "java.project.referencedLibraries": {
-        "include": [
-            "lib/**/*.jar"
-        ],
-        "exclude": [
-            "c:\\Users\\kakur\\Downloads\\commons-io-2.16.1-bin\\commons-io-2.16.1\\commons-io-2.16.1.jar"
-        ]
-    }
+  "java.project.referencedLibraries": {
+    "include": ["lib/**/*.jar"],
+    "exclude": [
+      "c:\\Users\\kakur\\Downloads\\commons-io-2.16.1-bin\\commons-io-2.16.1\\commons-io-2.16.1.jar"
+    ]
+  },
+  "editor.fontSize": 18,
+  "java.configuration.updateBuildConfiguration": "automatic"
 }
