--- a/school/pom.xml
+++ b/school/pom.xml
@@ -14,21 +14,23 @@
     </properties>
 
     <dependencies>
-<dependency>
-  <groupId>org.jxls</groupId>
-  <artifactId>jxls-jexcel</artifactId>
-  <version>1.0.9</version>
-</dependency>
-<dependency>
-    <groupId>org.dhatim</groupId>
-    <artifactId>fastexcel-reader</artifactId>
-    <version>0.17.0</version>
-</dependency>
-<dependency>
-    <groupId>org.dhatim</groupId>
-    <artifactId>fastexcel</artifactId>
-    <version>0.17.0</version>
-</dependency>
+    <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+    <dependency>
+        <groupId>com.mysql</groupId>
+        <artifactId>mysql-connector-j</artifactId>
+        <version>8.3.0</version>
+        <scope>runtime</scope>
+    </dependency>
+            <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>8.0.13</version>
+        <scope>runtime</scope>
+        </dependency>
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+  
+
+
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
@@ -44,7 +46,6 @@
             <artifactId>poi</artifactId>
             <version>5.2.2</version>
         </dependency>
-
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
