--- a/school/pom.xml
+++ b/school/pom.xml
@@ -14,7 +14,12 @@
     </properties>
 
     <dependencies>
-    <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
     <dependency>
         <groupId>com.mysql</groupId>
         <artifactId>mysql-connector-j</artifactId>
@@ -24,13 +29,15 @@
             <dependency>
         <groupId>mysql</groupId>
         <artifactId>mysql-connector-java</artifactId>
-        <version>8.0.13</version>
+        <version>8.0.27</version>
         <scope>runtime</scope>
         </dependency>
-    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-  
-
-
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
