--- a/CommandLine/pom.xml
+++ b/CommandLine/pom.xml
@@ -40,6 +40,12 @@
       <version>1.6.2</version>
 
     </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.13.2</version>
+          <scope>test</scope>
+      </dependency>
 
   </dependencies>
 
