--- a/adminPanel/composer.json
+++ b/adminPanel/composer.json
@@ -11,8 +11,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "laravel/ui": "^4.5",
-        "maatwebsite/excel": "^3.1"
+        "laravel/ui": "*",
+        "maatwebsite/excel": "~3.1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
