--- a/CommandLine/pom.xml
+++ b/CommandLine/pom.xml
@@ -17,6 +17,12 @@
 
   <dependencies>
     <dependency>
+        <groupId>org.json</groupId>
+        <artifactId>json</artifactId>
+        <version>20240303</version>
+    </dependency>
+
+    <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.28</version>
